force-app/main/default/objects/ST_ConstructionSite__c/ST_ConstructionSite__c.object-meta.xml
<CustomObject>
    <label>現場</label>
    <nameField>
        <label>現場名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>