force-app/main/default/objects/ST_ConstructionSite__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>得意先名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>