force-app/main/default/objects/ST_ConstructionSite__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <label>住所（都道府県～番地）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>