force-app/main/default/objects/ST_ConstructionSite__c/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <label>住所（建物名・部屋番号）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>