force-app/main/default/objects/ST_ConstructionSite__c/fields/AdjustmentMoney__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentMoney__c</fullName>
    <label>調整金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>