force-app/main/default/objects/ST_ConstructionSite__c/fields/AttnInvoice__c.field-meta.xml
<CustomField>
    <fullName>AttnInvoice__c</fullName>
    <formula>IF(
  LEN(TRIM(Custmer__c)) = 0,
  &quot;御中&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求用_御中</label>
    <type>Text</type>
</CustomField>