force-app/main/default/objects/ST_ConstructionSite__c/fields/BilledAmountExclTax__c.field-meta.xml
<CustomField>
    <fullName>BilledAmountExclTax__c</fullName>
    <label>④請求済金額_税抜</label>
    <summarizedField>ST_DeliveryRecord__c.ShippingAmountALL__c</summarizedField>
    <summaryFilterItems>
        <field>ST_DeliveryRecord__c.IsBilledAmountExclTax__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ST_DeliveryRecord__c.BillingDate__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>ST_DeliveryRecord__c.ST_field_name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>