force-app/main/default/objects/ST_ConstructionSite__c/fields/BilledAmountInclTax__c.field-meta.xml
<CustomField>
    <fullName>BilledAmountInclTax__c</fullName>
    <formula>ROUND(BilledAmountExclTax__c * (1+consumptionTaxRate__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⑪請求済金額_税込</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>