force-app/main/default/objects/ST_ConstructionSite__c/fields/ConstructionSite__c.field-meta.xml
<CustomField>
    <fullName>ConstructionSite__c</fullName>
    <label>請求用現場名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>