force-app/main/default/objects/ST_ConstructionSite__c/fields/consumptionTaxRate__c.field-meta.xml
<CustomField>
    <fullName>consumptionTaxRate__c</fullName>
    <defaultValue>0.1</defaultValue>
    <label>消費税率</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>