force-app/main/default/objects/ST_ConstructionSite__c/fields/ContractAmountInclTax__c.field-meta.xml
<CustomField>
    <fullName>ContractAmountInclTax__c</fullName>
    <formula>ROUND(ST_contract_amount__c * (1+consumptionTaxRate__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⑧契約金額_税込</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>