force-app/main/default/objects/ST_ConstructionSite__c/fields/contractBalance__c.field-meta.xml
<CustomField>
    <fullName>contractBalance__c</fullName>
    <formula>ST_contract_amount__c -  contractBalanceCalc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約残高</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>