force-app/main/default/objects/ST_ConstructionSite__c/fields/contractDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>contractDiscountAmount__c</fullName>
    <label>契約値引き額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>