force-app/main/default/objects/ST_ConstructionSite__c/fields/contractDiscountBalance__c.field-meta.xml
<CustomField>
    <fullName>contractDiscountBalance__c</fullName>
    <formula>contractDiscountAmount__c +  inContractBilledDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約値引き残高</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>