force-app/main/default/objects/ST_ConstructionSite__c/fields/ContractDiscountExclTax__c.field-meta.xml
<CustomField>
    <fullName>ContractDiscountExclTax__c</fullName>
    <label>⑥契約値引_税抜</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>