force-app/main/default/objects/ST_ConstructionSite__c/fields/ContractDiscountTotalExclTax__c.field-meta.xml
<CustomField>
    <fullName>ContractDiscountTotalExclTax__c</fullName>
    <label>⑦累計契約値引_税抜</label>
    <summarizedField>ST_DeliveryRecord__c.ShippingAmountALL__c</summarizedField>
    <summaryFilterItems>
        <field>ST_DeliveryRecord__c.ST_item_converted__c</field>
        <operation>contains</operation>
        <value>値引</value>
    </summaryFilterItems>
    <summaryForeignKey>ST_DeliveryRecord__c.ST_field_name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>