force-app/main/default/objects/ST_ConstructionSite__c/fields/ContractRemainingInclTax__c.field-meta.xml
<CustomField>
    <fullName>ContractRemainingInclTax__c</fullName>
    <formula>ContractAmountInclTax__c - BilledAmountInclTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⑫契約残_税込</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>