force-app/main/default/objects/ST_ConstructionSite__c/fields/Custmer__c.field-meta.xml
<CustomField>
    <fullName>Custmer__c</fullName>
    <label>担当者名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>