force-app/main/default/objects/ST_ConstructionSite__c/fields/CustmerInvoice__c.field-meta.xml
<CustomField>
    <fullName>CustmerInvoice__c</fullName>
    <formula>IF(
  LEN(TRIM(Custmer__c)) &gt; 0,
  &quot;ご担当　&quot; &amp; TRIM(Custmer__c) &amp; &quot;　様&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求用_担当者名</label>
    <type>Text</type>
</CustomField>