force-app/main/default/objects/ST_ConstructionSite__c/fields/detailTotalInContractRounddown__c.field-meta.xml
<CustomField>
    <fullName>detailTotalInContractRounddown__c</fullName>
    <label>②明細集計_契約内_ROUNDDOWN（切り捨て）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>