force-app/main/default/objects/ST_ConstructionSite__c/fields/detailTotalInContractRounddownTax__c.field-meta.xml
<CustomField>
    <fullName>detailTotalInContractRounddownTax__c</fullName>
    <formula>detailTotalInContractRounddown__c * consumptionTaxRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⑥明細集計_契約内_ROUNDDOWN（切り捨て）_消費税額</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>