force-app/main/default/objects/ST_ConstructionSite__c/fields/detailTotalInContractRoundedSum__c.field-meta.xml
<CustomField>
    <fullName>detailTotalInContractRoundedSum__c</fullName>
    <formula>detailTotalInContractRounded__c +  detailTotalInContractRoundedTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当月請求金額(税込)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>