force-app/main/default/objects/ST_ConstructionSite__c/fields/detailTotalOutContractRounddown__c.field-meta.xml
<CustomField>
    <fullName>detailTotalOutContractRounddown__c</fullName>
    <label>④明細集計_契約外_ROUNDDOWN（切り捨て）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>