force-app/main/default/objects/ST_ConstructionSite__c/fields/detailTotalOutContractRounddownSum__c.field-meta.xml
<CustomField>
    <fullName>detailTotalOutContractRounddownSum__c</fullName>
    <formula>detailTotalOutContractRounddown__c +  detailTotalOutContractRounddownTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⑫明細集計_契約外_ROUNDDOWN（切り捨て）_合計</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>