force-app/main/default/objects/ST_ConstructionSite__c/fields/detailTotalOutContractRounddownTax__c.field-meta.xml
<CustomField>
    <fullName>detailTotalOutContractRounddownTax__c</fullName>
    <formula>FLOOR(detailTotalOutContractRounddown__c * consumptionTaxRate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⑧明細集計_契約外_ROUNDDOWN（切り捨て）_消費税額</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>