force-app/main/default/objects/ST_ConstructionSite__c/fields/detailTotalOutContractRounded__c.field-meta.xml
<CustomField>
    <fullName>detailTotalOutContractRounded__c</fullName>
    <label>③明細集計_契約外_ROUND（四捨五入）</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>