force-app/main/default/objects/ST_ConstructionSite__c/fields/detailTotalOutContractRoundedSum__c.field-meta.xml
<CustomField>
    <fullName>detailTotalOutContractRoundedSum__c</fullName>
    <formula>detailTotalOutContractRounded__c +  detailTotalOutContractRoundedTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⑪明細集計_契約外_ROUND（四捨五入）_合計</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>