force-app/main/default/objects/ST_ConstructionSite__c/fields/detailTotalOutContractRoundedTax__c.field-meta.xml
<CustomField>
    <fullName>detailTotalOutContractRoundedTax__c</fullName>
    <formula>detailTotalOutContractRounded__c * consumptionTaxRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⑦明細集計_契約外_ROUND（四捨五入）_消費税額</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>