force-app/main/default/objects/ST_ConstructionSite__c/fields/inContractBilledAmount__c.field-meta.xml
<CustomField>
    <fullName>inContractBilledAmount__c</fullName>
    <formula>ST_contract_amount__c -  inContractBilledAmountCalc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>契約内請求済み金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>