force-app/main/default/objects/ST_ConstructionSite__c/fields/Invoice_contract__c.field-meta.xml
<CustomField>
    <fullName>Invoice_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求書出力_契約内</label>
    <type>Checkbox</type>
</CustomField>