force-app/main/default/objects/ST_ConstructionSite__c/fields/Invoice_OutsideTheContract__c.field-meta.xml
<CustomField>
    <fullName>Invoice_OutsideTheContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求書出力_契約外</label>
    <type>Checkbox</type>
</CustomField>