force-app/main/default/objects/ST_ConstructionSite__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>注意事項</label>
    <type>TextArea</type>
</CustomField>