force-app/main/default/objects/ST_ConstructionSite__c/fields/OpportunityProbability__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProbability__c</fullName>
    <label>受注確度</label>
    <length>100</length>
    <type>Text</type>
</CustomField>