force-app/main/default/objects/ST_ConstructionSite__c/fields/outContractBilledAmountCalc__c.field-meta.xml
<CustomField>
    <fullName>outContractBilledAmountCalc__c</fullName>
    <label>契約外請求済み金額（計算用）</label>
    <summarizedField>ST_DeliveryRecord__c.ShippingAmountALL__c</summarizedField>
    <summaryFilterItems>
        <field>ST_DeliveryRecord__c.isOutOfContract__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ST_DeliveryRecord__c.isExistBillingDeadLine__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ST_DeliveryRecord__c.Excludedfrombilling_summary__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>ST_DeliveryRecord__c.ST_field_name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>