force-app/main/default/objects/ST_ConstructionSite__c/fields/ReceivedAmountInclTax__c.field-meta.xml
<CustomField>
    <fullName>ReceivedAmountInclTax__c</fullName>
    <label>⑬入金済金額_税込</label>
    <summarizedField>ST_DeliveryRecord__c.Paid_Amount_Tax_Included__c</summarizedField>
    <summaryForeignKey>ST_DeliveryRecord__c.ST_field_name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>