force-app/main/default/objects/ST_ConstructionSite__c/fields/ShipmentTotalInclTax__c.field-meta.xml
<CustomField>
    <fullName>ShipmentTotalInclTax__c</fullName>
    <formula>ROUND(ShipmentTotalExclTax__c * (1+consumptionTaxRate__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⑨出荷累計_税込</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>