force-app/main/default/objects/ST_ConstructionSite__c/fields/ShipmentTotalWithDiscountExclTax__c.field-meta.xml
<CustomField>
    <fullName>ShipmentTotalWithDiscountExclTax__c</fullName>
    <label>③出荷累計_値引含む_税抜</label>
    <summarizedField>ST_DeliveryRecord__c.ShippingAmountALL__c</summarizedField>
    <summaryFilterItems>
        <field>ST_DeliveryRecord__c.Excludedfrombilling_summary__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ST_DeliveryRecord__c.isOutOfContractSplit__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>ST_DeliveryRecord__c.ST_field_name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>