force-app/main/default/objects/ST_ConstructionSite__c/fields/ShipmentTotalWithDiscountInclTax__c.field-meta.xml
<CustomField>
    <fullName>ShipmentTotalWithDiscountInclTax__c</fullName>
    <formula>ROUND(ShipmentTotalWithDiscountExclTax__c * (1+consumptionTaxRate__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⑩出荷累計_値引含む_税込</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>