force-app/main/default/objects/ST_ConstructionSite__c/fields/ST_account__c.field-meta.xml
<CustomField>
    <fullName>ST_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>現場</relationshipLabel>
    <relationshipName>ST_account_Account</relationshipName>
    <type>Lookup</type>
</CustomField>