force-app/main/default/objects/ST_ConstructionSite__c/fields/ST_customer_code__c.field-meta.xml
<CustomField>
    <fullName>ST_customer_code__c</fullName>
    <label>得意先コード</label>
    <length>225</length>
    <type>Text</type>
</CustomField>