force-app/main/default/objects/ST_ConstructionSite__c/fields/ST_discount_calculating__c.field-meta.xml
<CustomField>
    <fullName>ST_discount_calculating__c</fullName>
    <label>割引計算パターン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>下2桁カット</fullName>
            </value>
            <value>
                <fullName>下3桁カット</fullName>
            </value>
            <value>
                <fullName>下4桁カット</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>