force-app/main/default/objects/ST_ConstructionSite__c/fields/ST_round_steel_item_number_2__c.field-meta.xml
<CustomField>
    <fullName>ST_round_steel_item_number_2__c</fullName>
    <label>丸鋼明細番号２</label>
    <length>225</length>
    <type>Text</type>
</CustomField>