force-app/main/default/objects/ST_ConstructionSite__c/fields/targetBillingCloseDateInvoice__c.field-meta.xml
<CustomField>
    <fullName>targetBillingCloseDateInvoice__c</fullName>
    <formula>TEXT(YEAR(targetBillingCloseDate__c)) &amp; &apos;/&apos; &amp; TEXT(MONTH(targetBillingCloseDate__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(targetBillingCloseDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求用_対象請求締日</label>
    <type>Text</type>
</CustomField>