force-app/main/default/objects/ST_ConstructionSite__c/fields/TemporaryMemo__c.field-meta.xml
<CustomField>
    <fullName>TemporaryMemo__c</fullName>
    <label>【一時的】注意事項</label>
    <type>TextArea</type>
</CustomField>