force-app/main/default/objects/ST_ConstructionSite__c/fields/totalDeliveredAmt__c.field-meta.xml
<CustomField>
    <fullName>totalDeliveredAmt__c</fullName>
    <label>納入済み契約金額合計</label>
    <summarizedField>ST_DeliveryRecord__c.ShippingAmount_rep__c</summarizedField>
    <summaryFilterItems>
        <field>ST_DeliveryRecord__c.isSkipBillingDataSync__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>ST_DeliveryRecord__c.ST_field_name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>