force-app/main/default/objects/ST_ConstructionSite__c/fields/UncollectedAmountInclTax__c.field-meta.xml
<CustomField>
    <fullName>UncollectedAmountInclTax__c</fullName>
    <formula>ShipmentTotalWithDiscountInclTax__c -  ReceivedAmountInclTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>⑭未回収金額_税込</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>