force-app/main/default/objects/ST_ConstructionSite__c/fields/ZIP__c.field-meta.xml
<CustomField>
    <fullName>ZIP__c</fullName>
    <label>郵便番号</label>
    <length>100</length>
    <type>Text</type>
</CustomField>