force-app/main/default/objects/ST_ConstructionSite__c/fields/ZIPInvoice__c.field-meta.xml
<CustomField>
    <fullName>ZIPInvoice__c</fullName>
    <formula>IF(
  NOT(ISBLANK(ZIP__c)),
  &quot;〒&quot; &amp; ZIP__c,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求用_郵便番号</label>
    <type>Text</type>
</CustomField>