force-app/main/default/objects/ST_ConstructionSite__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>ST_customer_code__c</columns>
    <columns>ST_project_number__c</columns>
    <columns>consumptionTaxRate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>