force-app/main/default/objects/ST_ConstructionSite__c/listViews/invier.listView-meta.xml
<ListView>
    <fullName>invier</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>ST_customer_code__c</columns>
    <columns>ST_project_number__c</columns>
    <columns>consumptionTaxRate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>対応中</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>生和コーポレーション株式会社</value>
    </filters>
    <label>生和コーポレーション</label>
    <sharedTo>
        <role>noharasteel</role>
    </sharedTo>
</ListView>