force-app/main/default/objects/ST_ConstructionSite__c/listViews/Listview_Steel2.listView-meta.xml
<ListView>
    <fullName>Listview_Steel2</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>ST_customer_code__c</columns>
    <columns>ST_project_number__c</columns>
    <columns>consumptionTaxRate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>対応中</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <label>対応中</label>
</ListView>